--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-  <img src="IMG_0456.jpeg" alt="UrkIAnova" class="full-image">
+  <img src="2B840A09-CB50-4955-BCD0-05967BF276D8.jpeg" alt="UrkIAnova" class="full-image">
 </body>
 </html>
